Quiz game made changes to HTML, CSS, JS

--- a/intro.html
+++ b/intro.html
@@ -5,33 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/intro.css">
     
-    <title>Call of Duty Jeopardy</title>
+    <title>Lazy J Custom Meats Triva</title>
 </head>
 
 <body>
-    <h1 class="GameTitle">Welcome to Call of Duty Jeopardy</h1>
+    <h1 class="GameTitle">Welcome to Lazy J Custom Meats Triva Game</h1>
 
     <div>
-        <h2 class="obj">Game Instructions</h2>
+        <h2 class="obj">How to play</h2>
         <ul class="objbox">
-            <li class="objlist">This will test your knowledge on 5 different Call of Duty Games</li>
+            <li class="objlist">This quiz will test you on processing questions</li>
             <br>
-            <li class="objlist">Under each catergoy are 5 questions ranging from easy to hard</li>
+            <li class="objlist">Once you are at the quiz the first of 15 questions will show .</li>
             <br>
-            <li class="objlist">Once you decide which tile you want click on the tile and the question will pop up if
-                you have answered correctly it will turn the answer green and increase your score if you answered wrong
-                it will show red and your score wont change</li>
+            <li class="objlist">Each qustion is multiple choice when you decided on the answer you think is correct click on the button to select that answer. Once you have selected an answer the quiz will proceed to the next question</li>
             <br>
-            <li class="objlist">You will have 3 attempts at testing your knowledge before the game will end and display
-                your final score</li>
+            <li class="objlist">Once you have completed all of the questions you will get your final score and it will show the number of questions you got right out of 15. To see what the correct answers are click on the check answers button. If you want to retry the quiz select the back to quiz button. </li>
             <br>
-            <li class="objlist">When your ready to test your knowledge and see how high of score you can get click the
-                start button to proceed to the game </li>
+            <li class="objlist">When you are ready to test your knowledge click the "Proceed To Quiz" button at the bottom you will be taken to the Quiz.</li>
         </ul>
     </div>
-   <button><a class="save" href="main.html">Start</a></button>
+   <button><a class="save" href="main.html">Proceed To Game</a></button>
 </body>
 
 </html>
