--- a/intro.html
+++ b/intro.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <img src="./images/main-logo.PNG" alt="main logo">
     <h1 class="GameTitle">Welcome to Lazy J Custom Meats Triva Game</h1>
 
     <div>
