made changes to JS file

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 <body>
     <body>
        
-     <img id="mainlogo"src="./images/main-logo.PNG" alt="Lazy J Logo" id="img" class="img">
+     <img id="mainlogo"src="./images/main-logo.PNG" alt="main logo" id="img" class="img">
      <h1 id="title">Lazy J Custom Meats Quiz</h1>
  
      <!-- quiz-container -->
