--- a/intro.html
+++ b/intro.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/intro.css">
+    <link rel="stylesheet" href="./css/style.css">
+
     
     <title>Lazy J Custom Meats Triva</title>
 </head>
