--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/main.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="main.js" defer></script>
     <title>Lazy J Custom Meats Trivia</title>
 </head>
@@ -39,7 +39,7 @@
  
      </div>
  
-     <!-- scoreboard section -->
+     <!-- scoreboard section SASS DONE -->
      <div id="scoreboard">
          <h2 id="score-title">Your Score</h2>
          <h2 id="score"></h2>
